--- a/assets/sass/0-abstracts/_variables.sass
+++ b/assets/sass/0-abstracts/_variables.sass
@@ -3,13 +3,11 @@ $fontstack2: "Anek Latin", serif
 $fontstack3: "Big Shoulders Text", serif
 $fontstack4: "Big Shoulders Display", serif
 
-$basecolor: #f06499
-$basecolor2: #60bbd7
-$basecolor3: #ffdc00
-$basecolor4: #bc86ce
-$basecolor5: #fffced
+$basecolor: #0080ff
+$basecolor2: #d0ff00
+$basecolor3: #2d2d2d
 
-$text: #000
+$text: #333333
 
 $black: #000
 $white: #fff
