--- a/assets/sass/4-layouts/_home.sass
+++ b/assets/sass/4-layouts/_home.sass
@@ -2,113 +2,260 @@
 // body.isHome
 //     @media (min-width: 992px) and (max-width: 1551px)
 //         zoom: 90%
-#About
+#Gallery
     width: 100%
     height: auto
     display: block
-    overflow: hidden
     position: relative
     z-index: 0
-    padding: 60px 0 20px
+    padding: 30px 0
     @media only screen and (min-width: 576px)
-        padding: 60px 0 30px
+        padding: 40px 0
     @media only screen and (min-width: 992px)
-        padding: 80px 0 40px
+        padding: 50px 0
     @media only screen and (min-width: 1551px)
-        padding: 120px 0 60px
+        padding: 60px 0
     &>.delmt
         width: 40px
         height: auto
         display: block
         position: absolute
-        z-index: -1
-        top: 5%
-        left: 30%
-        @media only screen and (min-width: 576px)
-            top: 30%
-        @media only screen and (min-width: 992px)
-            width: 80px
-            top: 24%
-        @media only screen and (min-width: 1551px)
-            width: 100px
-        &_bg
-            --bg-clr: #cde3ec
-            width: 100%
+        z-index: 0
+        top: 4%
+        left: 4%
+        &_2
+            width: 40px
             height: auto
             display: block
             position: absolute
             z-index: -1
-            top: -5%
-            left: 0
-            right: 0
-            @media only screen and (min-width: 576px)
-                top: -10%
-        img, svg
-            @include imgFit
-    .dFlx
-        align-items: center
-        @include display
-        @media only screen and (min-width: 576px)
-            margin: 0 -20px
-        @media only screen and (min-width: 992px)
-            margin: 0 -40px
-        @media only screen and (min-width: 1551px)
-            margin: 0 -80px
-        &>*
-            padding: 10px 0
-            @media only screen and (min-width: 576px)
-                padding: 0 20px
-            @media only screen and (min-width: 992px)
-                padding: 0 40px
-            @media only screen and (min-width: 1551px)
-                padding: 0 80px
-        &>.fullSd
-            width: 100%
-        &>.lftSd
-            width: 100%
-            @media only screen and (min-width: 576px)
-                width: 50%
-            @media only screen and (min-width: 1551px)
-                width: 52%
-        &>.rgtSd
-            width: 100%
-            @media only screen and (min-width: 576px)
-                width: 50%
-            @media only screen and (min-width: 1551px)
-                width: 48%
-    .cntWrap
-        width: 100%
-        height: auto
-        display: block
-    .imgWrap
-        width: 100%
-        max-width: 320px
-        height: auto
-        margin: 0 auto
-        position: relative
-        z-index: 0
-        @media only screen and (min-width: 992px)
-            max-width: 420px
-        @media only screen and (min-width: 1551px)
-            max-width: 540px
-        &:hover
-            .mainImg, img
-                transform: scale(1.1)
-        &>.delmt
-            width: 60px
+            top: 9%
+            left: calc((50% + (var(--container-x) / 2)) - 15px)
+        &_3
+            width: 40px
             height: auto
             display: block
             position: absolute
-            z-index: 1
-            top: 0
-            right: 0
-            @media only screen and (min-width: 992px)
-                width: 100px
-            @media only screen and (min-width: 1551px)
-                width: 140px
+            z-index: -1
+            top: 70%
+            right: calc((50% + (var(--container-x) / 2)) - 15px)
+
+        img, svg
+            @include imgFit
+    .galFlx
+        @include display
+        .galCol
+            width: 50%
+            @include display
+            &:nth-child(1)
+                width: calc(50% / 2)
+                .item
+                    width: calc(100% / 2)
+                    &:first-child
+                        width: 100%
+            &:nth-child(2)
+                width: calc(50% / 2)
+                .item
+                    width: calc(100% / 2)
+                    &:last-child
+                        width: 100%
+            &:nth-child(3)
+                .item
+                    width: calc(100% / 3)
+                    &:nth-child(1), &:nth-child(2)
+                        width: 50%
+        .item
+            width: calc(100% / 4)
+    .imgBx
+        width: 100%
+        height: 100%
+        display: block
+        overflow: hidden
+        &:hover
+            img
+                transform: scale(1.1)
         img
             transition: transform 0.4s
             @include imgFit
+
+#Programs
+    width: 100%
+    height: auto
+    display: block
+    position: relative
+    z-index: 0
+    padding: 30px 0
+    @media only screen and (min-width: 576px)
+        padding: 40px 0
+    @media only screen and (min-width: 992px)
+        padding: 50px 0
+    @media only screen and (min-width: 1551px)
+        padding: 60px 0
+    .programBx
+        width: 100%
+        height: auto
+        display: block
+        overflow: hidden
+        position: relative
+        z-index: 0
+        &>img
+            @include imgFit
+        .tle
+            font-size: 16px
+            line-height: 1.1
+            font-weight: 500
+            text-transform: uppercase
+            color: $white
+            @media only screen and (min-width: 576px)
+                font-size: 20px
+            @media only screen and (min-width: 992px)
+                font-size: 24px
+            @media only screen and (min-width: 1551px)
+                font-size: 30px
+        .txt
+            @extend %pTxt
+            text-transform: uppercase
+            color: $white
+        .bxCnt
+            width: 100%
+            max-width: 60%
+            height: auto
+            margin: auto
+            display: block
+            position: absolute
+            z-index: 1
+            inset: 0
+            top: auto
+            margin-bottom: 30px
+            @media only screen and (min-width: 992px)
+                margin-bottom: 60px
+            @media only screen and (min-width: 1551px)
+                margin-bottom: 80px
+            &>*
+                margin: 5px 0
+                @media only screen and (min-width: 992px)
+                    margin: 10px 0
+        .exBtn
+            @extend %baseBtnTxt
+            width: 100%
+            max-width: 100px
+            height: 30px
+            padding: 5px
+            display: block
+            background-color: $basecolor2
+            border: 1px solid $basecolor2
+            transition: transform 0.4s
+            @include center
+            @media only screen and (min-width: 576px)
+                max-width: 120px
+                margin-top: 10px
+            @media only screen and (min-width: 992px)
+                max-width: 140px
+                margin-top: 20px
+            &:hover
+                color: $white
+    .academyWrap
+        width: 100%
+        height: auto
+        display: block
+        margin-top: 30px
+        @media only screen and (min-width: 992px)
+            margin-top: 60px
+        @media only screen and (min-width: 1551px)
+            margin-top: 100px
+        .imgWrap
+            width: 100%
+            height: auto
+            display: block
+            margin-bottom: 20px
+            img
+                @include imgFit
+        .txtWrap
+            width: 100%
+            max-width: 70%
+            height: auto
+            display: block
+            margin-left: auto
+            h5
+                line-height: 1.2
+                font-weight: 400
+                color: $white
+
+#JoinDlu
+    width: 100%
+    height: 468px
+    display: block
+    background-color: $white
+    position: relative
+    z-index: 0
+    padding: 30px 0
+    @media only screen and (min-width: 576px)
+        height: var(--app-height)
+        padding: 40px 0
+    @media only screen and (min-width: 992px)
+        min-height: 520px
+        padding: 50px 0
+    @media only screen and (min-width: 1551px)
+        min-height: 576px
+        padding: 60px 0
+    .delmt_bg
+        width: 100%
+        height: 100%
+        display: block
+        position: absolute
+        z-index: -1
+        inset: 0
+        top: auto
+        img
+            @include imgFit
+    .tleWrap
+        .mHd
+            color: $basecolor
+    .faqAcco
+        width: 100%
+        height: auto
+        display: block
+        .accordion-item
+            background: none
+            border: 0
+            border-radius: 0
+        .accordion-button
+            background: none
+            box-shadow: none
+            border-radius: 0
+            padding-left: 0
+            padding-right: 0
+            width: 100%
+            height: auto
+            font-size: 16px
+            line-height: 1
+            font-weight: 600
+            text-transform: uppercase
+            color: rgba($basecolor, 0.4)
+            @media only screen and (min-width: 576px)
+                font-size: 20px
+            @media only screen and (min-width: 992px)
+                font-size: 24px
+            @media only screen and (min-width: 1551px)
+                font-size: 30px
+            &::after
+                display: none
+            &[aria-expanded="true"]
+                color: $basecolor
+            &:hover
+                color: rgba($basecolor, 0.6)
+        .accordion-body
+            padding-left: 0
+            padding-right: 0
+    .dFlx
+        @include display
+        &>.lftSd
+            width: calc(100% - 340px)
+        &>.rgtSd
+            width: 340px
+    .ckCntWrap
+        h1, h2, h3, h4, h5, h6, p, li, td
+            color: $basecolor
 
 #EnhanceBusiness
     width: 100%
