--- a/assets/sass/4-layouts/_mainSlider.sass
+++ b/assets/sass/4-layouts/_mainSlider.sass
@@ -7,8 +7,24 @@
     overflow: hidden
     position: relative
     z-index: 0
-    .carousel-item
+    .bannerSlide
+        .swiper-slide
+            &:not(.swiper-slide-active)
+                .cntWrap
+                    &>*
+                        transform: translateY(100%)
+                        opacity: 0
+            &.swiper-slide-active
+                .cntWrap
+                    &>*
+                        opacity: 1
+                        transform: none
+                        transition: transform 0.4s ease
+    .banner-item
+        width: 100%
         height: 468px
+        display: block
+        background-color: $basecolor
         position: relative
         z-index: 0
         @media only screen and (min-width: 576px)
@@ -17,66 +33,23 @@
             min-height: 520px
         @media only screen and (min-width: 1551px)
             min-height: 576px
-        &:not(.active)
-            .cntWrap
-                &>*
-                    transform: translateY(100%)
-                    opacity: 0
-        &.active
-            .cntWrap
-                &>*
-                    opacity: 1
-                    transform: none
-                    transition: transform 0.4s ease
         &>.container
             position: absolute
             z-index: 1
             inset: 0
-            padding: calc(var(--header-y) + 10px) 0 20px
+            padding-top: calc(var(--header-y) + 10px)
+            padding-bottom: 20px
+            align-items: center
+            @include display
             @media only screen and (min-width: 576px)
-                padding: calc(var(--header-y) + 15px) 0 30px
+                padding-top: calc(var(--header-y) + 15px)
+                padding-bottom: 30px
             @media only screen and (min-width: 1551px)
-                padding: calc(var(--header-y) + 20px) 0 40px
-        &>.delmt_spcl
-            width: 40px
-            height: auto
-            display: block
-            position: absolute
-            z-index: 2
-            bottom: 44%
-            right: 15%
-            @media only screen and (min-width: 576px)
-                width: 60px
-            @media only screen and (min-width: 992px)
-                width: 80px
-            @media only screen and (min-width: 1551px)
-                width: 90px
-            &:hover
-                img
-                    transform: scale(0.6)
-            img
-                transition: transform 0.4s 
-                @include imgFit
-        &>.delmt_king
-            width: 30px
-            height: auto
-            display: block
-            position: absolute
-            z-index: 2
-            bottom: 44%
-            left: 20%
-            @media only screen and (min-width: 576px)
-                width: 40px
-            @media only screen and (min-width: 992px)
-                width: 60px
-            @media only screen and (min-width: 1551px)
-                width: 80px
-            &:hover
-                img
-                    transform: scale(0.6)
-            img
-                transition: transform 0.4s 
-                @include imgFit
+                padding-top: calc(var(--header-y) + 20px)
+                padding-bottom: 40px
+    img, picture, source
+        @include imgFit
+        object-fit: contain
     .dFlx
         height: 100%
         flex-direction: column
@@ -84,130 +57,89 @@
         @include display
         &>.fullSd
             width: 100%
-    .bgImgWrap
-        width: 100%
-        height: 100%
-        display: inline-block
-        img, picture, source
-            display: inline
-            @include imgFit
     .cntWrap
         width: 100%
         height: auto
-        margin: auto
-        text-align: center
-        @media only screen and (min-width: 992px)
-            max-width: 768px
-        @media only screen and (min-width: 1551px)
-            max-width: 820px
+        flex-direction: column
+        @include display
         &>*
             margin: 2px 0
-            @media only screen and (min-width: 992px)
-                margin: 4px 0
         .mHead
-            font-size: 52px
-            line-height: 1.35
-            font-weight: normal
-            font-family: $fontstack2
-            text-transform: capitalize
-            color: $basecolor
-            -webkit-text-stroke: 1px $white
-            color: transparent
-            margin: 0
+            font-size: 36px
+            line-height: 1.2
+            font-weight: 600
+            font-family: $fontstack3
+            text-transform: uppercase
+            white-space: nowrap
+            color: $white
+            display: inline-block
             position: relative
             z-index: 0
-            display: inline-block
             @media only screen and (min-width: 468px)
-                font-size: 58px
+                font-size: 54px
             @media only screen and (min-width: 576px)
                 font-size: 68px
             @media only screen and (min-width: 992px)
-                font-size: 82px
+                font-size: 72px
             @media only screen and (min-width: 1200px)
-                font-size: 120px
+                font-size: 92px
             @media only screen and (min-width: 1551px)
-                font-size: 160px
+                font-size: 120px
             @media only screen and (min-width: 1771px)
-                font-size: 200px
+                font-size: 160px
             &::before
                 content: attr(data-text)
-                width: auto
-                height: 130px
+                width: 100%
+                height: 100%
                 position: absolute
                 inset: 0
-                color: $basecolor
-                -webkit-text-stroke: 3px $basecolor
-                white-space: nowrap
+                color: $basecolor3
                 overflow: hidden
-                animation: text-fill 2s ease-in-out alternate infinite
+                animation: text-fill 6s ease-in-out alternate infinite
                 pointer-events: none
-                @media only screen and (min-width: 992px)
-                    height: 300px
-                @media only screen and (min-width: 1551px)
-                    height: 440px
+            &:nth-child(2)
+                &::before
+                    animation-duration: 3s
         .mTxt
-            font-size: 20px
+            font-size: 18px
             line-height: 1
             font-weight: 600
-            color: $text
+            font-family: $fontstack3
+            text-transform: uppercase
+            color: $basecolor2
+            display: inline-block
             @media only screen and (min-width: 576px)
-                font-size: 24px
+                font-size: 26px
             @media only screen and (min-width: 992px)
-                font-size: 34px
+                font-size: 44px
             @media only screen and (min-width: 1551px)
-                font-size: 46px
+                font-size: 58px
             @media only screen and (min-width: 1771px)
-                font-size: 60px
-        .txt
-            font-size: 14px
-            line-height: 1.4
-            font-weight: 700
-            color: $text
-            @media only screen and (min-width: 576px)
-                font-size: 18px
-            @media only screen and (min-width: 992px)
-                font-size: 20px
-            @media only screen and (min-width: 1551px)
-                font-size: 28px
-            @media only screen and (min-width: 1771px)
-                font-size: 32px
-    .carousel-indicators
-        margin: 0
-        padding: 15px
-        padding-bottom: var(--padd-y)
-        z-index: 0
-        justify-content: flex-end
-        align-items: center
-        display: none
-        @media only screen and (min-width: 576px)
-            display: flex
-        .carousel-indicatorsWrap
-            justify-content: flex-end
+                font-size: 80px
+        .delmt-btn
+            align-items: center
             @include display
-        button
-            width: 6px
-            height: 4px
-            opacity: 0.4
-            will-change: transform
-            background: $white
-            border: 1px solid $white
-            margin: 2px
-            transition: all 0.4s ease
-            position: relative
-            z-index: 0
-            @media only screen and (min-width: 576px)
-                width: 8px
-                height: 5px
-            @media only screen and (min-width: 992px)
-                width: 10px
-                height: 6px
-                margin: 3px
-            &:hover
-                opacity: 0.8
-            &.active
-                width: 20px
-                opacity: 1
+            &>a
+                width: 40px
+                height: auto
+                aspect-ratio: 4/4
+                display: inline-block
+                background-color: $basecolor2
+                border: 1px solid $basecolor2
+                border-radius: 50%
+                -webkit-border-radius: 50%
+                transition: transform 0.4s
+                @include center
                 @media only screen and (min-width: 576px)
-                    width: 40px
+                    width: 60px
                 @media only screen and (min-width: 992px)
-                    width: 60pxss
+                    width: 80px
+                @media only screen and (min-width: 1551px)
+                    width: 120px
+                &:hover
+                    transform: scale(0.8)
+                img
+                    width: 100%
+                    max-width: 20px
+                    height: auto
+                    display: block
