--- a/assets/sass/0-abstracts/_extends.sass
+++ b/assets/sass/0-abstracts/_extends.sass
@@ -17,6 +17,19 @@
     @media only screen and (min-width: 1771px)
         font-size: 18px
 
+%ckCntWrapTxt
+    font-size: 12px
+    line-height: 1.4
+    font-weight: 300
+    color: $white
+    @media only screen and (min-width: 576px)
+        font-size: 13px
+    @media only screen and (min-width: 992px)
+        font-size: 14px
+        line-height: 1.6
+    @media only screen and (min-width: 1551px)
+        font-size: 16px
+
 %baseBtnTxt
     @include defaultValue
     font-size: 12px
