--- a/assets/sass/4-layouts/_footer.sass
+++ b/assets/sass/4-layouts/_footer.sass
@@ -47,7 +47,7 @@
             display: block
         @media only screen and (min-width: 992px)
             max-width: 60px
-        @media only screen and (min-width: 1551px)
+        @media only screen and (min-width: 1200px)
             max-width: 80px
         img, svg
             display: block
@@ -57,8 +57,15 @@
         max-width: 80px
         height: auto
         display: block
+        @media only screen and (min-width: 992px)
+            max-width: 120px
+        &:hover
+            img
+                transform: scale(1.2)
         img, svg
-            display: block
+            transition: transform 0.4s ease
+            @include imgFit
+            object-fit: contain
     .ftUl
         display: block
         &>li
