--- a/assets/sass/4-layouts/_header.sass
+++ b/assets/sass/4-layouts/_header.sass
@@ -515,8 +515,10 @@
                     max-width: 200px
                 @media only screen and (min-width: $header-collapse)
                     max-width: 100%
+                    height: 35px
                     padding: 10px 10px
                 @media only screen and (min-width: 1551px)
+                    height: 40px
                     padding: 10px 15px
                 &:hover
                     color: $black
