--- a/assets/sass/4-layouts/_mainSlider.sass
+++ b/assets/sass/4-layouts/_mainSlider.sass
@@ -67,12 +67,12 @@
             margin: 2px 0
         .mHead
             font-size: 36px
-            line-height: 1.2
+            line-height: 1
             font-weight: 600
             font-family: $fontstack3
             text-transform: uppercase
             white-space: nowrap
-            color: $white
+            color: $basecolor2
             display: inline-block
             position: relative
             z-index: 0
@@ -81,20 +81,20 @@
             @media only screen and (min-width: 576px)
                 font-size: 68px
             @media only screen and (min-width: 992px)
-                font-size: 72px
+                font-size: 100px
             @media only screen and (min-width: 1200px)
-                font-size: 92px
+                font-size: 152px
             @media only screen and (min-width: 1551px)
-                font-size: 120px
+                font-size: 158px
             @media only screen and (min-width: 1771px)
-                font-size: 160px
+                font-size: 172px
             &::before
                 content: attr(data-text)
                 width: 100%
                 height: 100%
                 position: absolute
                 inset: 0
-                color: $basecolor2
+                color: $white
                 overflow: hidden
                 animation: text-fill 6s ease-in-out alternate infinite
                 pointer-events: none
@@ -112,9 +112,9 @@
             @media only screen and (min-width: 576px)
                 font-size: 26px
             @media only screen and (min-width: 992px)
-                font-size: 44px
+                font-size: 54px
             @media only screen and (min-width: 1551px)
-                font-size: 58px
+                font-size: 62px
             @media only screen and (min-width: 1771px)
                 font-size: 80px
         .delmt-btn
@@ -130,11 +130,13 @@
                 border-radius: 50%
                 -webkit-border-radius: 50%
                 transition: transform 0.4s
+                position: relative
+                z-index: 1
                 @include center
                 @media only screen and (min-width: 576px)
                     width: 60px
                 @media only screen and (min-width: 992px)
-                    width: 80px
+                    width: 100px
                 @media only screen and (min-width: 1551px)
                     width: 120px
                 &:hover
