--- a/assets/sass/4-layouts/_header.sass
+++ b/assets/sass/4-layouts/_header.sass
@@ -13,7 +13,7 @@
     width: 100%
     height: var(--header-y)
     background: $basecolor2
-    background: linear-gradient(0deg, rgba($basecolor, 0) 0%, rgba($basecolor, 1) 100%)
+    background: linear-gradient(0deg, rgba($black, 0) 0%, rgba($black, 0.2) 100%)
     animation-duration: .4s
     transition: background 0s ease
     position: absolute
