--- a/assets/sass/5-pages/_about.sass
+++ b/assets/sass/5-pages/_about.sass
@@ -15,8 +15,9 @@
         .academyWrap
             width: 100%
             height: auto
-            @include display
+            @include display 
             .imgWrap
+                @extend %secTle2
                 width: 100%
                 height: auto
                 display: block
