--- a/assets/sass/0-abstracts/_extends.sass
+++ b/assets/sass/0-abstracts/_extends.sass
@@ -57,67 +57,89 @@
 %labelTxt
     font-size: 12px
     line-height: 1.2
-    font-weight: 500
-    color: $text
+    font-weight: 400
+    color: $white
     @media only screen and (min-width: 576px)
         font-size: 13px
     @media only screen and (min-width: 992px)
         font-size: 14px
     @media only screen and (min-width: 1551px)
         font-size: 16px
-    @media only screen and (min-width: 1771px)
-        font-size: 18px
 
 %form-control-txt
-    font-size: 12px 
+    font-size: 12px
     line-height: 1.2
-    font-weight: 500
-    color: $text
+    font-weight: 400
+    color: $white
     @media only screen and (min-width: 576px)
         font-size: 13px
     @media only screen and (min-width: 992px)
         font-size: 14px
     @media only screen and (min-width: 1551px)
         font-size: 16px
-    @media only screen and (min-width: 1771px)
-        font-size: 18px
 
 %form-control
     @extend %form-control-txt
-    width: 100% 
+    width: 100%
     height: 40px
-    border: 3px solid rgba($basecolor2, 0.4)
-    border-radius: 15px
-    -webkit-border-radius: 15px
-    background: $basecolor3
-    padding: 5px 10px
+    border: 1px solid $white
+    border-width: 0 0 1px 0
+    border-radius: 0
+    -webkit-border-radius: 0
+    background: none
+    padding: 5px 0
     transition: all .4s ease
     align-items: center
     @include display
     @media only screen and (min-width: 992px)
         height: 50px
-        padding: 10px 15px
+        padding: 10px 0
     @media only screen and (min-width: 1551px)
         height: 60px
     &:valid ~ .showPass
         opacity: 1
         pointer-events: all
     &::placeholder
-        color: rgba($black, 0.5)
+        color: $white
         text-transform: none
     &:focus
-        color: $black
-        border-color: rgba($basecolor2, 0.6)
-        box-shadow: 0 0 0 .15rem rgba($basecolor2,.25)
+        color: $white
+        border-color: $basecolor2
+        box-shadow: none
+        background: none
     &:-webkit-autofill, &:-webkit-autofill:hover, &:-webkit-autofill:focus, &:-webkit-autofill:active
-        -webkit-box-shadow: 0 0 0 30px rgba(#d9d9d9, 0.1) inset
-        -webkit-text-fill-color: $black
+        -webkit-box-shadow: 0 0 0 30px rgba($black, 0.1) inset
+        -webkit-text-fill-color: $white
         transition: background-color 5000s ease-in-out 0s
     &:-internal-autofill-selected
         background-color: -internal-light-dark(rgb(0, 0, 0), rgba(70, 90, 126, 0.4))
-        -webkit-box-shadow: 0 0 0 30px rgba(#d9d9d9, 0.1) inset
+        -webkit-box-shadow: 0 0 0 30px rgba($black, 0.1) inset
     &::-ms-expand
         background-color: transparent
         border: 0
     @media (prefers-reduced-motion: reduce)
         transition: none
+
+%secTle2
+    font-size: 24px
+    line-height: 1
+    font-weight: 600
+    font-family: $fontstack3
+    text-transform: uppercase
+    color: $basecolor2
+    @media only screen and (min-width: 576px)
+        font-size: 28px
+    @media only screen and (min-width: 992px)
+        font-size: 32px
+    @media only screen and (min-width: 1551px)
+        font-size: 38px
+
+%secDisc
+    font-size: 1.1rem
+    line-height: 1.3
+    font-weight: 300
+    color: $white
+    @media only screen and (min-width: 576px)
+        font-size: 1.3rem
+    @media only screen and (min-width: 992px)
+        font-size: 1.5rem
