--- a/assets/sass/0-abstracts/_variables.sass
+++ b/assets/sass/0-abstracts/_variables.sass
@@ -6,6 +6,7 @@ $fontstack4: "Big Shoulders Display", serif
 $basecolor: #0080ff
 $basecolor2: #d0ff00
 $basecolor3: #2d2d2d
+$basecolor4: #145ddd
 
 $text: #333333
 
