--- a/assets/sass/4-layouts/_layout.sass
+++ b/assets/sass/4-layouts/_layout.sass
@@ -3,8 +3,6 @@
 // layout
 :root
     --container-x: 100%
-    --swiper-preloader-color: $basecolor
-    --swiper-theme-color: $basecolor2
     --header-y: 90px
     @media only screen and (min-width: 576px)
         --header-y: 120px
@@ -104,7 +102,7 @@
         height: 45px
         padding: 8px
 
-button[type="submit"], .btn
+.btn
     @extend %baseBtnTxt
 
 input.baseBtn
