--- a/assets/sass/5-pages/_course.sass
+++ b/assets/sass/5-pages/_course.sass
@@ -17,23 +17,13 @@
             height: auto
             @include display
             .imgWrap
-                font-size: 24px
-                line-height: 1
-                font-weight: 600
-                font-family: $fontstack3
-                text-transform: uppercase
-                color: $basecolor2
+                @extend %secTle2
                 width: 100%
                 height: auto
                 display: block
                 margin-bottom: 15px
-                @media only screen and (min-width: 576px)
-                    font-size: 28px
                 @media only screen and (min-width: 992px)
-                    font-size: 32px
                     max-width: 30%
-                @media only screen and (min-width: 1551px)
-                    font-size: 38px
                 img
                     width: 140px
                     height: auto
@@ -218,7 +208,7 @@
         .cStructureBx
             width: 100%
             height: auto
-            background-color: $basecolor
+            background-color: $basecolor4
             padding: 15px
             margin-top: 20px
             align-items: center
@@ -505,7 +495,8 @@
                 right: 0
                 width: 100%
                 height: 50%
-                background-color: #145ddd
+                background-color: $basecolor4
+                pointer-events: none
                 @media only screen and (min-width: 992px)
                     top: 40%
                 @media only screen and (min-width: 1200px)
@@ -627,6 +618,153 @@
                 height: 100%
                 display: block
 
+    #ExGallery
+        width: 100%
+        height: auto
+        display: block
+        padding: 40px 0
+        @media only screen and (min-width: 576px)
+            padding: 60px 0
+        @media only screen and (min-width: 992px)
+            padding: 80px 0
+        @media only screen and (min-width: 1551px)
+            padding: 100px 0
+        .exGallerySlide
+            margin: auto
+            --swiper-pagination-bottom: 0
+            --swiper-pagination-bullet-inactive-color: #a0a0a0
+            --swiper-pagination-bullet-inactive-opacity: 1
+            @media only screen and (min-width: 576px)
+                max-width: 576px
+            @media only screen and (min-width: 992px)
+                max-width: 1080px
+            @media only screen and (min-width: 1551px)
+                max-width: 1080px
+            .exGalleryBx
+                width: 100%
+                max-width: calc(100% - 100px)
+                height: auto
+                aspect-ratio: 4/2
+                overflow: hidden
+                display: block
+                margin: 0 auto 20px
+                @media only screen and (min-width: 992px)
+                    margin: 0 auto 30px
+                    max-width: calc(100% - 200px)
+                img
+                    @include imgFit
+
+    #VibrantCommunity
+        width: 100%
+        height: auto
+        background-color: $basecolor4
+        display: block
+        padding: 30px 0
+        @media only screen and (min-width: 576px)
+            padding: 40px 0
+        @media only screen and (min-width: 992px)
+            padding: 80px 0 180px
+        @media only screen and (min-width: 1551px)
+            padding: 100px 0 240px
+        .dFlx
+            @include display
+            @media only screen and (min-width: 992px)
+                margin: 0 -15px
+            @media only screen and (min-width: 1551px)
+                margin: 0 -20px
+            &>*
+                padding: 15px 0
+                @media only screen and (min-width: 992px)
+                    padding: 0 15px
+                @media only screen and (min-width: 1551px)
+                    padding: 0 20px
+            &>.lftSd
+                width: 100%
+                @media only screen and (min-width: 992px)
+                    width: calc(100% - 476px)
+                @media only screen and (min-width: 1200px)
+                    width: calc(100% - 520px)
+                @media only screen and (min-width: 1551px)
+                    width: calc(100% - 548px)
+            &>.rgtSd
+                width: 100%
+                @media only screen and (min-width: 992px)
+                    width: 476px
+                @media only screen and (min-width: 1200px)
+                    width: 520px
+                @media only screen and (min-width: 1551px)
+                    width: 548px
+        .imgOuter
+            width: 100%
+            max-width: 576px
+            height: auto
+            aspect-ratio: 4/2
+            position: relative
+            z-index: 0
+            @media only screen and (min-width: 992px)
+                max-width: 100%
+            @media only screen and (max-width: 991px)
+                display: grid
+                grid-template-columns: repeat(2, 1fr)
+                grid-template-rows: repeat(2, 1fr)
+                grid-column-gap: 10px
+                grid-row-gap: 10px
+            &>.delmt_img1, &>.delmt_img2
+                width: 100%
+                height: 100%
+                display: block
+                overflow: hidden
+                @media only screen and (min-width: 992px)
+                    width: 276px
+                    height: auto
+                    aspect-ratio: 4/3
+                    position: absolute
+                    z-index: 0
+                &:hover
+                    img
+                        transform: scale(1.05)
+                img
+                    transition: transform 0.4s
+                    @include imgFit
+            &>.delmt_img1
+                @media only screen and (min-width: 992px)
+                    right: calc(100% + 20px)
+                    left: auto
+                    transform: translateY(50%)
+                    bottom: 0
+                    top: auto
+                @media only screen and (min-width: 1551px)
+                    right: calc(100% + 30px)
+                @media only screen and (max-width: 991px)
+                    grid-area: 1 / 2 / 2 / 3
+            &>.delmt_img2
+                @media only screen and (min-width: 992px)
+                    top: calc(100% + 20px)
+                    left: 0
+                @media only screen and (min-width: 1551px)
+                    top: calc(100% + 30px)
+                @media only screen and (max-width: 991px)
+                    grid-area: 2 / 2 / 3 / 3
+        .imgWrap
+            width: 100%
+            height: 100%
+            display: block
+            overflow: hidden
+            @media only screen and (min-width: 992px)
+                height: auto
+                aspect-ratio: 4/4
+            @media only screen and (max-width: 991px)
+                grid-area: 1 / 1 / 3 / 2
+            &:hover
+                img
+                    transform: scale(1.05)
+            img
+                transition: transform 0.4s
+                @include imgFit
+        .cntWrap
+            p
+                color: $white
+
     // #Gateway
     //     .gatewayBx
     //         border-radius: 20px
@@ -678,7 +816,6 @@
     #CourseInfo
         @media only screen and (min-width: 576px)
             padding-bottom: 0
-    
 
 .coursePage.professionalModelling
     #CourseSyllabus
@@ -699,3 +836,12 @@
                 padding: 15px 10px
             @media only screen and (min-width: 992px)
                 padding: 20px 15px
+
+.coursePage.lifeDlu
+    #LifeDlu
+        padding: 0
+    #Gateway
+        @media only screen and (min-width: 992px)
+            padding-top: 140px
+        @media only screen and (min-width: 1551px)
+            padding-top: 260px
